# github-rs

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml
compile_tests/: Cargo.toml
docs/: design.md  endpoints.md
examples/: cached_responses.rs  custom_endpoint_and_adding_headers.rs  getting_started.rs  wrapping_responses.rs
github-gql-rs/: Cargo.toml  README.md
github-gql-rs/src/: client.rs  lib.rs  mutation.rs  query.rs
github-gql-rs/tests/: users.rs
src/: client.rs  errors.rs  headers.rs  imports.rs  lib.rs  macros.rs  util.rs
src/misc/: get.rs
src/notifications/: delete.rs  get.rs  patch.rs  put.rs
src/repos/: get.rs
src/search/: get.rs  mod.rs  types.rs
src/teams/: delete.rs  get.rs  patch.rs  put.rs
src/users/: delete.rs  get.rs  patch.rs  post.rs  put.rs
tests/: gitignore.rs  notifications.rs  orgs.rs  testutil.rs  users.rs
