[package]
name = "github_rs_compile_tests"
version = "0.1.0"

[features]
default = ["github-rs/default"]
rust-native-tls = ["github-rs/rust-native-tls"]

[dependencies]
github-rs = { version = "*", path = "../", default-features = false, optional = true }

[dependencies.compiletest_rs]
version = "0.3"
features = ["stable"]
